--- a/BookReadingEvents/Views/Home/EventsInvitedTo.cshtml
+++ b/BookReadingEvents/Views/Home/EventsInvitedTo.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "Contact";
+    ViewBag.Title = "Events Invited To :";
 }
 <h2>@ViewBag.Title.</h2>
 <h3>@ViewBag.Message</h3>
