--- a/BookReadingEvents/Views/Shared/_Layout.cshtml
+++ b/BookReadingEvents/Views/Shared/_Layout.cshtml
@@ -21,8 +21,8 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("MyEvents", "MyEvents", "Home")</li>
+                    <li>@Html.ActionLink("EventsInvitedTo", "EventsInvitedTo", "Home")</li>
                 </ul>
             </div>
         </div>
