--- a/BookReadingEvents/Views/Shared/_Layout.cshtml
+++ b/BookReadingEvents/Views/Shared/_Layout.cshtml
@@ -16,12 +16,11 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("BookReadingEvents", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("BookReadingEvents", "Index", "Events", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("MyEvents", "MyEvents", "Home")</li>
+                    <li>@Html.ActionLink("MyEvents", "MyEvents", "Events")</li>
                     <li>@Html.ActionLink("EventsInvitedTo", "EventsInvitedTo", "Home")</li>
                 </ul>
             </div>
