--- a/BookReadingEvents/Views/Login/Index.cshtml
+++ b/BookReadingEvents/Views/Login/Index.cshtml
@@ -31,10 +31,15 @@
                     <label for="password">Password</label>
                     <input type="password" class="form-control" name="password" id="password" placeholder="Enter Password">
                 </div>
-                <button type="submit" class="btn btn-primary">Submit</button>
+
+                @* Login *@
+                <div>@Html.ActionLink("Login" , "Index" , "Events")</div>
+                @*<button type="submit" class="btn btn-primary">Submit</button>*@
                 <div class="line"></div>
                 <br />
-                <div class="ww">Not a member ? <a style="text-decoration:none;" href="https://localhost:44307/Home/SignUp">Sign Up</a></div>
+                @* Sign up *@
+                <div>@Html.ActionLink("Sign Up" , "SignUp", "Login")</div>
+               @* <div class="ww">Not a member ? <a style="text-decoration:none;"href="https://localhost:44307/Home/SignUp">Sign Up</a></div>*@
             </form>
         </div>
         <div class="col"></div>
