--- a/BookReadingEvents/Views/Events/Index.cshtml
+++ b/BookReadingEvents/Views/Events/Index.cshtml
@@ -59,7 +59,9 @@
             @Html.DisplayFor(modelItem => item.Description)
         </td>
         <td>
-           @Html.ActionLink("Details", "Details", new { id=item.EventId })
+            @Html.ActionLink("Edit", "Edit", new { id=item.EventId }) |
+            @Html.ActionLink("Details", "Details", new { id=item.EventId }) |
+            @Html.ActionLink("Delete", "Delete", new { id=item.EventId })
         </td>
     </tr>
 }
