--- a/BookReadingEvents/Views/Login/Index.cshtml
+++ b/BookReadingEvents/Views/Login/Index.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model BookReadingEvents.Domain.User
 @{
     Layout = null;
 }
@@ -23,18 +23,22 @@
             <h1 class="head">Login</h1>
             <form action="/login" method="POST">
                 <div class="form-group">
-                    <label for="username">Username</label>
-                    <input type="text" class="form-control" name="username" id="username" placeholder="Enter Username">
+                    @Html.LabelFor(model => model.Email)
+                   @* <label for="username">Username</label>*@
+                    @Html.EditorFor(model => model.Email)
+                   @* <input type="text" class="form-control" name="username" id="username" placeholder="Enter Username">*@
                     <small class="form-text text-muted">We'll never share your username with anyone else.</small>
                 </div>
                 <div class="form-group">
-                    <label for="password">Password</label>
-                    <input type="password" class="form-control" name="password" id="password" placeholder="Enter Password">
+                    @Html.LabelFor(model => model.Password)
+                  @*  <label for="password">Password</label>*@
+                    @Html.PasswordFor(model => model.Password)
+                  @*  <input type="password" class="form-control" name="password" id="password" placeholder="Enter Password">*@
                 </div>
 
                 @* Login *@
-                <div>@Html.ActionLink("Login" , "Index" , "Events")</div>
-                @*<button type="submit" class="btn btn-primary">Submit</button>*@
+                @*<div>@Html.ActionLink("Login" , "Index" , "Events")</div>*@
+                <button type="submit" class="btn btn-primary">Submit</button>
                 <div class="line"></div>
                 <br />
                 @* Sign up *@
