--- a/BookReadingEvents/Views/Login/SignUp.cshtml
+++ b/BookReadingEvents/Views/Login/SignUp.cshtml
@@ -1,6 +1,7 @@
 ﻿@{
     Layout = null;
 }
+@model BookReadingEvents.Domain.User
 
 <!DOCTYPE html>
 
@@ -26,19 +27,23 @@
                 <small class="form-text text-muted">Please fill this form to create an account.</small>
             </div>
             <br>
-            <form action="/signup" method="POST">
+            <form action="/Login/SignUp" method="POST">
                 <!--<div class="form-group">
                     <label for="username">Username</label>
                     <input type="text" class="form-control" name="username" id="username" placeholder="Enter Username">
                 </div>-->
                 <div class="form-group">
-                    <label for="email">Email</label>
-                    <input type="email" class="form-control" name="email" id="email" placeholder="Enter email address">
+                    @Html.LabelFor(model => model.Email)
+                    @*<label for="email">Email</label>*@
+                    @Html.EditorFor(model => model.Email)
+                    @*<input type="email" class="form-control" name="email" id="email" placeholder="Enter email address">*@
                     <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
                 </div>
                 <div class="form-group">
-                    <label for="password">Password</label>
-                    <input type="password" class="form-control" name="password" id="password" placeholder="Password">
+                    @Html.LabelFor(model => model.Password)
+                    @*<label for="password">Password</label>*@
+                    @Html.PasswordFor(model => model.Password)
+                    @*<input type="password" class="form-control" name="password" id="password" placeholder="Password">*@
                     <br />
                     <small class="form-text text-muted">By clicking Join Now, you agree to User Agreement, Privacy Policy and all terms & conditions.</small>
                 </div>
