--- a/BookReadingEvents/Views/Login/SignUp.cshtml
+++ b/BookReadingEvents/Views/Login/SignUp.cshtml
@@ -28,26 +28,18 @@
             </div>
             <br>
             <form action="/Login/SignUp" method="POST">
-                <!--<div class="form-group">
-                    <label for="username">Username</label>
-                    <input type="text" class="form-control" name="username" id="username" placeholder="Enter Username">
-                </div>-->
                 <div class="form-group">
                     @Html.LabelFor(model => model.Email)
-                    @*<label for="email">Email</label>*@
                     @Html.EditorFor(model => model.Email)
-                    @*<input type="email" class="form-control" name="email" id="email" placeholder="Enter email address">*@
                     <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
                 </div>
                 <div class="form-group">
                     @Html.LabelFor(model => model.Password)
-                    @*<label for="password">Password</label>*@
                     @Html.PasswordFor(model => model.Password)
-                    @*<input type="password" class="form-control" name="password" id="password" placeholder="Password">*@
-                    <br />
-                    <small class="form-text text-muted">By clicking Join Now, you agree to User Agreement, Privacy Policy and all terms & conditions.</small>
+                 <br/>
+                <small class="form-text text-muted">By clicking Join Now, you agree to User Agreement, Privacy Policy and all terms & conditions.</small>
                 </div>
-                <button type="submit" class="btn btn-primary btn-lg btn-block">Join Now</button>
+                <button type="submit" class="btn btn-primary">Join Now</button>
                 <div class="line"></div>
                 <br />
                 <div class="text-center">Already have an account ? <a style="text-decoration:none;" href="https://localhost:44307/Login">Login</a></div>
