Added ViewModels and Sessions

--- a/BookReadingEvents/Views/Events/Index.cshtml
+++ b/BookReadingEvents/Views/Events/Index.cshtml
@@ -7,6 +7,8 @@
 <h2>All Public Events</h2>
 
 <p>
+    @Session["Email"]
+    @Session["Id"]
     @Html.ActionLink("Create New", "Create")
 </p>
 <table class="table">
