--- a/BookReadingEvents/Views/Login/Index.cshtml
+++ b/BookReadingEvents/Views/Login/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model BookReadingEvents.Domain.User
+﻿@model BookReadingEvents.ViewModels.LoginViewModel
 @{
     Layout = "~/Views/Shared/_LayoutLoginSignup.cshtml";
 }
