--- a/BookReadingEvents/Views/Login/SignUp.cshtml
+++ b/BookReadingEvents/Views/Login/SignUp.cshtml
@@ -3,7 +3,6 @@
 }
 @model BookReadingEvents.Domain.User
 
-
     <div class="row">
         <div class="col"></div>
         <div class="col form">
@@ -21,10 +20,16 @@
                     <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
                 </div>
                 <div class="form-group">
-                    @Html.LabelFor(model => model.Password)
-                    @Html.PasswordFor(model => model.Password)
-                 <br/>
-                <small class="form-text text-muted">By clicking Join Now, you agree to User Agreement, Privacy Policy and all terms & conditions.</small>
+                        @Html.LabelFor(model => model.Password)
+                        @Html.PasswordFor(model => model.Password)
+                    <br />
+                    <small class="form-text text-muted">By clicking Join Now, you agree to User Agreement, Privacy Policy and all terms & conditions.</small>
+                </div>
+                <div class="form-group">
+                    @Html.LabelFor(model => model.Role)
+                    @Html.EnumDropDownListFor(model => model.Role)
+                    <br />
+                  
                 </div>
                 <button type="submit" class="btn btn-primary">Join Now</button>
                 <div class="line"></div>
