--- a/BookReadingEvents/Views/Shared/_Layout.cshtml
+++ b/BookReadingEvents/Views/Shared/_Layout.cshtml
@@ -21,7 +21,7 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("MyEvents", "MyEvents", "Events")</li>
-                    <li>@Html.ActionLink("EventsInvitedTo", "EventsInvitedTo", "Home")</li>
+                    <li>@Html.ActionLink("EventsInvitedTo", "EventsInvitedTo", "Events")</li>
                 </ul>
             </div>
         </div>
