--- a/BookReadingEvents/Views/Events/MyEvents.cshtml
+++ b/BookReadingEvents/Views/Events/MyEvents.cshtml
@@ -1,29 +1,27 @@
 ﻿@model IEnumerable<BookReadingEvents.Domain.Event>
 
 @{
-    ViewBag.Title = "MyEvents";
+    ViewBag.Title = "My Events";
     
 }
 
 <h2>MyEvents</h2>
 @if (Model != null)
 {
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
+
 <table class="table">
     <tr>
         <th>
             @Html.DisplayNameFor(model => model.Title)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Location)
+            @Html.DisplayNameFor(model => model.Description)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.Date)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.UserId)
+            @Html.DisplayNameFor(model => model.Location)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.Duration)
@@ -31,45 +29,44 @@
         <th>
             @Html.DisplayNameFor(model => model.OtherDetails)
         </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Description)
-        </th>
+
         <th></th>
     </tr>
 
 @foreach (var item in Model)
 {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Title)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Location)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Date)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.UserId)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Duration)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.OtherDetails)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Description)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id = item.EventId }) |
-            @Html.ActionLink("Details", "Details", new { id = item.EventId }) |
-            @Html.ActionLink("Delete", "Delete", new { id = item.EventId })
-        </td>
-    </tr>
+<tr>
+    <td>
+        @Html.DisplayFor(modelItem => item.Title)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.Description)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.Date)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.Location)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.Duration)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.OtherDetails)
+    </td>
+    <td>
+        @Html.ActionLink("Edit", "Edit", "TableData" , new {eventId = item.EventId} , null) |
+        @Html.ActionLink("Details", "Detail", "TableData", new {eventId = item.EventId } , null) |
+        @Html.ActionLink("Delete", "Delete", "TableData", new { id = item.EventId } , null)
+    </td>
+</tr>
 }
 
 </table>
+
+<p>
+    @Html.ActionLink("Create New", "Create", null, new { @class = "btn btn-primary" })
+</p>
 }
 @if (Model == null) { 
 
