--- a/BookReadingEvents/Views/Events/MyEvents.cshtml
+++ b/BookReadingEvents/Views/Events/MyEvents.cshtml
@@ -43,7 +43,7 @@
         @Html.DisplayFor(modelItem => item.Description)
     </td>
     <td>
-        @Html.DisplayFor(modelItem => item.Date)
+        @Html.DisplayFor(modelItem => item.Date.Date)
     </td>
     <td>
         @Html.DisplayFor(modelItem => item.Location)
