--- a/BookReadingEvents/Views/Events/Create.cshtml
+++ b/BookReadingEvents/Views/Events/Create.cshtml
@@ -29,8 +29,19 @@
     @* Date *@
     <div class="form-group">
         @Html.LabelFor(model => model.Event.Date, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="text-muted">Enter in dd/mm/yyyy format</div>
         <div class="col-md-10">
-            @Html.EditorFor(model => model.Event.Date, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.EditorFor(model => model.Date, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.Event.Date, "", new { @class = "text-danger" })
+        </div>
+    </div>
+
+    @* Time *@
+    <div class="form-group">
+        @Html.LabelFor(model => model.Event.Date, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="text-muted">Enter in HR:MIN format</div>
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.Time, new { htmlAttributes = new { @class = "form-control" } })
             @Html.ValidationMessageFor(model => model.Event.Date, "", new { @class = "text-danger" })
         </div>
     </div>
