--- a/BookReadingEvents/Views/Login/Index.cshtml
+++ b/BookReadingEvents/Views/Login/Index.cshtml
@@ -2,31 +2,30 @@
 @{
     Layout = "~/Views/Shared/_LayoutLoginSignup.cshtml";
 }
-
-   <div class="row">
-        <div class="col"></div>
-        <div class="col login-form mt-5">
-            <h1 class="head">Login</h1>
-            <form action="/login" method="POST">
-                <div class="form-group">
-                    @Html.LabelFor(model => model.Email)
-                    @Html.EditorFor(model => model.Email)
-                    <br />
-                    <small class="form-text text-muted">We'll never share your username with anyone else.</small>
-                </div>
-                <div class="form-group">
-                    @Html.LabelFor(model => model.Password)
-                    @Html.PasswordFor(model => model.Password)
-                </div>
-
-                <button type="submit" class="btn btn-primary">Submit</button>
-                <div class="line"></div>
+<div class="row">
+    <div class="col"></div>
+    <div class="col login-form mt-5">
+        <h1 class="head">Login</h1>
+        <form action="/login/index" method="POST">
+            <div class="form-group">
+                @Html.LabelFor(model => model.Email)
+                @Html.EditorFor(model => model.Email)
                 <br />
+                <small class="form-text text-muted">We'll never share your username with anyone else.</small>
+            </div>
+            <div class="form-group">
+                @Html.LabelFor(model => model.Password)
+                @Html.PasswordFor(model => model.Password)
+            </div>
 
-                <div>@Html.ActionLink("Sign Up", "SignUp", "Login")</div>
+            <button type="submit" class="btn btn-primary">Submit</button>
+            <div class="line"></div>
+            <br />
 
-            </form>
-        </div>
-        <div class="col"></div>
+            <div>@Html.ActionLink("Sign Up", "SignUp", "Login")</div>
+
+        </form>
     </div>
+    <div class="col"></div>
+</div>
 
