--- a/BookReadingEvents/Views/Shared/_Layout.cshtml
+++ b/BookReadingEvents/Views/Shared/_Layout.cshtml
@@ -20,8 +20,11 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("MyEvents", "MyEvents", "Events")</li>
-                    <li>@Html.ActionLink("EventsInvitedTo", "EventsInvitedTo", "Events")</li>
+                    <li>@Html.ActionLink("My Events", "MyEvents", "Events")</li>
+                    <li>@Html.ActionLink("Invited To", "EventsInvitedTo", "Events")</li>
+                </ul>
+                <ul class="nav navbar-nav mr-auto">
+                    <li>@Html.ActionLink("Logout","Logout" ,"Events")</li>
                 </ul>
             </div>
         </div>
