--- a/BookReadingEvents/Views/Shared/_LayoutLoginSignup.cshtml
+++ b/BookReadingEvents/Views/Shared/_LayoutLoginSignup.cshtml
@@ -16,11 +16,11 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("BookReadingEvents", "Index", "Login", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("BookReadingEvents", "AllEventsBeforeLoginSignup", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Events", "AllEventsBeforeLoginSignup", "Login")</li>
+                    <li>@Html.ActionLink("Login", "Index")</li>
                 </ul>
             </div>
         </div>
