--- a/BookReadingEvents/Views/TableData/Delete.cshtml
+++ b/BookReadingEvents/Views/TableData/Delete.cshtml
@@ -1,12 +1,13 @@
 ﻿@model BookReadingEvents.Domain.Event
 
 @{
-    ViewBag.Title = "Detail";
+    ViewBag.Title = "Delete";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Detail</h2>
+<h2>Delete</h2>
 
+<h3>Are you sure you want to delete this?</h3>
 <div>
     <h4>Event</h4>
     <hr />
@@ -36,6 +37,14 @@
         </dd>
 
         <dt>
+            @Html.DisplayNameFor(model => model.UserId)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.UserId)
+        </dd>
+
+        <dt>
             @Html.DisplayNameFor(model => model.Duration)
         </dt>
 
@@ -60,7 +69,13 @@
         </dd>
 
     </dl>
+
+    @using (Html.BeginForm()) {
+        @Html.AntiForgeryToken()
+
+        <div class="form-actions no-color">
+            <input type="submit" value="Delete" class="btn btn-default" /> |
+            @Html.ActionLink("Back to List", "MyEvents", "Events")
+        </div>
+    }
 </div>
-<p>
-    @Html.ActionLink("Back to List", "MyEvents" , "Events")
-</p>
