--- a/BookReadingEvents/Views/Events/Index.cshtml
+++ b/BookReadingEvents/Views/Events/Index.cshtml
@@ -4,57 +4,14 @@
     ViewBag.Title = "All Events";
 }
 
-<h2>All Public Events</h2>
+<h1>Upcoming Events!</h1>
 
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Title)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Description)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Date)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Location)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Duration)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.OtherDetails)
-        </th>
+<div>
+    @Html.Partial("_EventsPartialView" , Model.Where(e => e.Date > DateTime.Now))
+</div>
 
-        <th></th>
-    </tr>
+<h1>Past Events!</h1>
 
-    @foreach (var item in Model)
-    {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Title)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Description)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Date)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Location)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Duration)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.OtherDetails)
-            </td>
-            <td>
-                @Html.ActionLink("Details", "Detail", "TableData", new { eventId = item.EventId }, null) 
-            </td>
-        </tr>
-    }
-
-</table>
+<div>
+    @Html.Partial("_EventsPartialView" , Model.Where(e=> e.Date < DateTime.Now))
+</div>
