--- a/BookReadingEvents/Views/Shared/_LayoutLoginSignup.cshtml
+++ b/BookReadingEvents/Views/Shared/_LayoutLoginSignup.cshtml
@@ -21,6 +21,7 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Login", "Index")</li>
+                    <li>@Html.ActionLink("Sign Up" , "SignUp")</li>
                 </ul>
             </div>
         </div>
