--- a/BookReadingEvents/Views/Admin/Delete.cshtml
+++ b/BookReadingEvents/Views/Admin/Delete.cshtml
@@ -1,12 +1,13 @@
 ﻿@model BookReadingEvents.Domain.Event
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "Delete";
     Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
 }
 
-<h2>Details</h2>
+<h2>Delete</h2>
 
+<h3>Are you sure you want to delete this?</h3>
 <div>
     <h4>Event</h4>
     <hr />
@@ -68,7 +69,13 @@
         </dd>
 
     </dl>
+
+    @using (Html.BeginForm()) {
+        @Html.AntiForgeryToken()
+
+        <div class="form-actions no-color">
+            <input type="submit" value="Delete" class="btn btn-default" /> |
+            @Html.ActionLink("Back to List", "Index")
+        </div>
+    }
 </div>
-<p>
-   @Html.ActionLink("Back to List", "Index")
-</p>
