--- a/BookReadingEvents/Views/Admin/Edit.cshtml
+++ b/BookReadingEvents/Views/Admin/Edit.cshtml
@@ -17,7 +17,8 @@
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
     @Html.HiddenFor(model => model.EventId)
     @Html.HiddenFor(model => model.UserId)
-   
+
+
     <div class="form-group">
         @Html.LabelFor(model => model.Title, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
@@ -48,6 +49,14 @@
         <div class="col-md-10">
             @Html.EditorFor(model => model.Duration, new { htmlAttributes = new { @class = "form-control" } })
             @Html.ValidationMessageFor(model => model.Duration, "", new { @class = "text-danger" })
+        </div>
+    </div>
+
+    <div class="form-group">
+        @Html.LabelFor(model => model.TypeOfEvent, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.EnumDropDownListFor(model => model.TypeOfEvent, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.TypeOfEvent, "", new { @class = "text-danger" })
         </div>
     </div>
 
