--- a/BookReadingEvents/Views/Admin/Index.cshtml
+++ b/BookReadingEvents/Views/Admin/Index.cshtml
@@ -55,8 +55,8 @@
     </td>
     <td>
         @Html.ActionLink("Edit", "Edit", new { eventId = item.Event.EventId}) |
-        @Html.ActionLink("Details", "Details", new { id = item.Event.EventId }) |
-        @Html.ActionLink("Delete", "Delete", new { id = item.Event.EventId })
+        @Html.ActionLink("Details", "Details", new { eventId = item.Event.EventId }) |
+        @Html.ActionLink("Delete", "Delete", new { eventId = item.Event.EventId })
     </td>
 </tr>
     }
