--- a/BookReadingEvents/Views/Login/Index.cshtml
+++ b/BookReadingEvents/Views/Login/Index.cshtml
@@ -5,25 +5,23 @@
 <div class="row">
     <div class="col"></div>
     <div class="col login-form mt-5">
-        <h1 class="head">Login</h1>
+        <h1 class="head" style="position:relative; right:-10px;">Login</h1>
+        <br />
         <form action="/login/index" method="POST">
             <div class="form-group">
-                @Html.LabelFor(model => model.Email)
+                @Html.LabelFor(model => model.Email, htmlAttributes: new { @class = "control-label col-md-2" })
                 @Html.EditorFor(model => model.Email)
-                <br />
-                <small class="form-text text-muted">We'll never share your username with anyone else.</small>
             </div>
+
             <div class="form-group">
-                @Html.LabelFor(model => model.Password)
+                @Html.LabelFor(model => model.Password, htmlAttributes: new { @class = "control-label col-md-2" })
                 @Html.PasswordFor(model => model.Password)
             </div>
 
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <button type="submit" style="position:relative; right:-10px;" class="btn btn-primary">Submit</button>
             <div class="line"></div>
             <br />
-
-            <div>@Html.ActionLink("Sign Up", "SignUp", "Login")</div>
-
+            <div style="position:relative; right:-10px;">Don't have an account ? @Html.ActionLink("Sign Up", "SignUp", "Login")</div>
         </form>
     </div>
     <div class="col"></div>
