--- a/BookReadingEvents/Views/Login/SignUp.cshtml
+++ b/BookReadingEvents/Views/Login/SignUp.cshtml
@@ -7,29 +7,25 @@
         <div class="col"></div>
         <div class="col form">
             <div class="head">
+                <h1 style="position:relative; right:-10px;">Sign Up</h1>
                 <br />
-                <br />
-                <h1>Sign Up</h1>
-                <small class="form-text text-muted">Please fill this form to create an account.</small>
             </div>
-            <br>
+            
             <form action="/Login/SignUp" method="POST">
                 <div class="form-group">
-                    @Html.LabelFor(model => model.Email)
+                    @Html.LabelFor(model => model.Email, htmlAttributes: new { @class = "control-label col-md-2" })
                     @Html.EditorFor(model => model.Email)
-                    <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
                 </div>
+
                 <div class="form-group">
-                        @Html.LabelFor(model => model.Password)
+                        @Html.LabelFor(model => model.Password, htmlAttributes: new { @class = "control-label col-md-2" })
                         @Html.PasswordFor(model => model.Password)
-                    <br />
-                    <small class="form-text text-muted">By clicking Join Now, you agree to User Agreement, Privacy Policy and all terms & conditions.</small>
                 </div>
                
-                <button type="submit" class="btn btn-primary">Join Now</button>
+                <button type="submit" style="position:relative; right:-10px;" class="btn btn-primary">Join Now</button>
                 <div class="line"></div>
                 <br />
-                <div class="text-center">Already have an account ? <a style="text-decoration:none;" href="https://localhost:44307/Login">Login</a></div>
+                <div style="position:relative; right:-10px;">Already have an account ? @Html.ActionLink("Login", "Index", "Login")</div>
             </form>
         </div>
         <div class="col"></div>
