--- a/BookReadingEvents/Views/Shared/_Layout.cshtml
+++ b/BookReadingEvents/Views/Shared/_Layout.cshtml
@@ -22,9 +22,11 @@
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("My Events", "MyEvents", "Events")</li>
                     <li>@Html.ActionLink("Invited To", "EventsInvitedTo", "Events")</li>
+                    
                 </ul>
                 <ul class="nav navbar-nav mr-auto">
-                    <li>@Html.ActionLink("Logout","Logout" ,"Events")</li>
+                    <li>@Html.ActionLink("Logout", "Logout", "Events")</li>
+                    <li><a href="https://helpdesk.nagarro.com ">Customer-Support</a></li>
                 </ul>
             </div>
         </div>
