--- a/BookReadingEvents/Views/Shared/_LayoutAdmin.cshtml
+++ b/BookReadingEvents/Views/Shared/_LayoutAdmin.cshtml
@@ -25,6 +25,7 @@
                 </ul>
                 <ul class="nav navbar-nav mr-auto">
                     <li>@Html.ActionLink("Logout", "Logout", "Events")</li>
+                    <li><a href="https://helpdesk.nagarro.com ">Customer-Support</a></li>
                 </ul>
             </div>
         </div>
