--- a/BookReadingEvents/Views/Shared/_LayoutLoginSignup.cshtml
+++ b/BookReadingEvents/Views/Shared/_LayoutLoginSignup.cshtml
@@ -21,7 +21,10 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Login", "Index")</li>
-                    <li>@Html.ActionLink("Sign Up" , "SignUp")</li>
+                    <li>@Html.ActionLink("Sign Up", "SignUp")</li>
+                </ul>
+                <ul class="nav navbar-nav mr-auto">
+                   <li><a href="https://helpdesk.nagarro.com ">Customer-Support</a></li>
                 </ul>
             </div>
         </div>
