--- a/BookReadingEvents/Views/Login/AllEventsBeforeLoginSignup.cshtml
+++ b/BookReadingEvents/Views/Login/AllEventsBeforeLoginSignup.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<BookReadingEvents.Domain.Event>
 
 @{
-    ViewBag.Title = "AllEventsBeforeLoginSignup";
+    ViewBag.Title = "Book Reading Events";
     Layout = "~/Views/Shared/_LayoutLoginSignup.cshtml";
 }
 
