--- a/BookReadingEvents/Views/Shared/_Layout.cshtml
+++ b/BookReadingEvents/Views/Shared/_Layout.cshtml
@@ -24,7 +24,9 @@
                     <li>@Html.ActionLink("Invited To", "EventsInvitedTo", "Events")</li>
                 </ul>
                 <ul class="nav navbar-nav mr-auto">
-                    <li>@Html.ActionLink("Logout","Logout" ,"Events")</li>
+                    <li>@Html.ActionLink("Logout", "Logout", "Events")</li>
+                    <li><a href="https://http://helpdesk.nagarro.com/kayako/">Customer-Support</a></li>
+
                 </ul>
             </div>
         </div>
