--- a/BookReadingEvents/Views/Login/Index.cshtml
+++ b/BookReadingEvents/Views/Login/Index.cshtml
@@ -1,7 +1,14 @@
 ﻿@model BookReadingEvents.ViewModels.LoginViewModel
 @{
     Layout = "~/Views/Shared/_LayoutLoginSignup.cshtml";
+    ViewBag.Title = "Login";
 }
+
+@if (ViewBag.Message != null)
+{
+    <div class="alert alert-danger">@ViewBag.Message</div>
+}
+
 <div class="row">
     <div class="col"></div>
     <div class="col login-form mt-5">
@@ -11,11 +18,13 @@
             <div class="form-group">
                 @Html.LabelFor(model => model.Email, htmlAttributes: new { @class = "control-label col-md-2" })
                 @Html.EditorFor(model => model.Email)
+                @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
             </div>
 
             <div class="form-group">
                 @Html.LabelFor(model => model.Password, htmlAttributes: new { @class = "control-label col-md-2" })
                 @Html.PasswordFor(model => model.Password)
+                @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
             </div>
 
             <button type="submit" style="position:relative; right:-10px;" class="btn btn-primary">Submit</button>
@@ -27,3 +36,7 @@
     <div class="col"></div>
 </div>
 
+@section scripts{
+    <script src="~/Scripts/jquery.validate.js"></script>
+    <script src="~/Scripts/jquery.validate.unobtrusive.js"></script>
+}
