--- a/BookReadingEvents/Views/Login/SignUp.cshtml
+++ b/BookReadingEvents/Views/Login/SignUp.cshtml
@@ -1,32 +1,47 @@
 ﻿@{
     Layout = "~/Views/Shared/_LayoutLoginSignup.cshtml";
+    ViewBag.Title = "Sign up";
 }
 @model BookReadingEvents.Domain.User
 
-    <div class="row">
-        <div class="col"></div>
-        <div class="col form">
-            <div class="head">
-                <h1 style="position:relative; right:-10px;">Sign Up</h1>
-                <br />
-            </div>
-            
-            <form action="/Login/SignUp" method="POST">
-                <div class="form-group">
-                    @Html.LabelFor(model => model.Email, htmlAttributes: new { @class = "control-label col-md-2" })
-                    @Html.EditorFor(model => model.Email)
-                </div>
+@if (ViewBag.Message != null)
+{
+    <div class="alert alert-danger">@ViewBag.Message</div>
+}
 
-                <div class="form-group">
-                        @Html.LabelFor(model => model.Password, htmlAttributes: new { @class = "control-label col-md-2" })
-                        @Html.PasswordFor(model => model.Password)
-                </div>
-               
-                <button type="submit" style="position:relative; right:-10px;" class="btn btn-primary">Join Now</button>
-                <div class="line"></div>
-                <br />
-                <div style="position:relative; right:-10px;">Already have an account ? @Html.ActionLink("Login", "Index", "Login")</div>
-            </form>
+<div class="row">
+    <div class="col"></div>
+    <div class="col form">
+        <div class="head">
+            <h1 style="position:relative; right:-10px;">Sign Up</h1>
+            <br />
         </div>
-        <div class="col"></div>
+
+        <form action="/Login/SignUp" method="POST">
+            <div class="form-group">
+                @Html.LabelFor(model => model.Email, htmlAttributes: new { @class = "control-label col-md-2" })
+                @Html.EditorFor(model => model.Email)
+                @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
+            </div>
+
+            <div class="form-group">
+                @Html.LabelFor(model => model.Password, htmlAttributes: new { @class = "control-label col-md-2" })
+                @Html.PasswordFor(model => model.Password)
+                @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
+            </div>
+
+            <button type="submit" style="position:relative; right:-10px;" class="btn btn-primary">Join Now</button>
+            <div class="line"></div>
+            <br />
+            <div style="position:relative; right:-10px;">Already have an account ? @Html.ActionLink("Login", "Index", "Login")</div>
+        </form>
     </div>
+    <div class="col"></div>
+</div>
+
+
+
+@section scripts{
+    <script src="~/Scripts/jquery.validate.js"></script>
+    <script src="~/Scripts/jquery.validate.unobtrusive.js"></script>
+}
