--- a/BookReadingEvents/Views/Shared/_LayoutLoginSignup.cshtml
+++ b/BookReadingEvents/Views/Shared/_LayoutLoginSignup.cshtml
@@ -21,7 +21,9 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Login", "Index")</li>
-                    <li>@Html.ActionLink("Sign Up" , "SignUp")</li>
+                    <li>@Html.ActionLink("Sign Up", "SignUp")</li>
+                    <li><a href="https://http://helpdesk.nagarro.com/kayako/">Customer-Support</a></li>
+
                 </ul>
             </div>
         </div>
