--- a/BookReadingEvents/Views/TableData/Detail.cshtml
+++ b/BookReadingEvents/Views/TableData/Detail.cshtml
@@ -62,5 +62,5 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Back to List", "MyEvents" , "Events")
+    @Html.ActionLink("Back to List", "Index","Events")
 </p>
