--- a/BookReadingEvents/Views/Events/Create.cshtml
+++ b/BookReadingEvents/Views/Events/Create.cshtml
@@ -29,19 +29,9 @@
     @* Date *@
     <div class="form-group">
         @Html.LabelFor(model => model.Event.Date, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="text-muted">Enter in dd/mm/yyyy format</div>
+        <div style="margin-left:210px" class="text-muted">Enter in dd/mm/yyyy format</div>
         <div class="col-md-10">
             @Html.EditorFor(model => model.Date, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.Event.Date, "", new { @class = "text-danger" })
-        </div>
-    </div>
-
-    @* Time *@
-    <div class="form-group">
-        @Html.LabelFor(model => model.Event.Date, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="text-muted">Enter in HR:MIN format</div>
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.Time, new { htmlAttributes = new { @class = "form-control" } })
             @Html.ValidationMessageFor(model => model.Event.Date, "", new { @class = "text-danger" })
         </div>
     </div>
@@ -78,7 +68,6 @@
         @Html.LabelFor(model => model.Event.TypeOfEvent, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
             @Html.EnumDropDownListFor(model => model.Event.TypeOfEvent, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.Event.Location, "", new { @class = "text-danger" })
         </div>
     </div>
 
@@ -112,5 +101,5 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to List", "MyEvents")
 </div>
